--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -20,7 +20,8 @@ $color-black: #1f2126;
 $color-grey: #4b4f5d;
 $color-white: #f5efed;
 
-$font-heading: 'Quicksand', sans-serif;
-$font-text: 'Source Sans Pro', sans-serif;
+$font-name: 'Dosis', sans-serif;
+$font-heading: 'Dosis', sans-serif;
+$font-text: 'Source Sans Pro', Sans-Serif;
 
 $border-light: 1px solid rgba(255, 255, 255, 0.3);
