--- a/styles/sass/partials/sections/_contact.scss
+++ b/styles/sass/partials/sections/_contact.scss
@@ -2,6 +2,17 @@
 
 .contact p {
     margin: 0;
+
+    a {
+        color: v.$color-primary;
+        transition: all .3s;
+
+        &:hover, 
+        &:focus {
+            color: v.$color-secondary;
+        }
+
+    }
 }
 
 .form {
@@ -26,6 +37,6 @@
 
         textarea {
             min-height: 20rem;
-        }
+        }   
     }
 } 
